--- a/data_bricks_use_case_workout/6_lakeflow_pipelines/lakeflow_ingestion_cloudfile_autoloader_1.ipynb
+++ b/data_bricks_use_case_workout/6_lakeflow_pipelines/lakeflow_ingestion_cloudfile_autoloader_1.ipynb
@@ -4,6 +4,22 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "320909a2-3837-483f-884d-478e95bfd89f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "![](/Workspace/Users/sunilasha625@gmail.com/DataBricksCodeRepo/data_bricks_use_case_workout/6_lakeflow_pipelines/autoloader_file_ingestion_usecase1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
