--- a/data_bricks_use_case_workout/6_lakeflow_pipelines/lakeflow_ingestion_api_cloudfile_autoloader_2.ipynb
+++ b/data_bricks_use_case_workout/6_lakeflow_pipelines/lakeflow_ingestion_api_cloudfile_autoloader_2.ipynb
@@ -127,7 +127,7 @@
     "            return\n",
     "        \n",
     "        try:\n",
-    "            data = resp.json()\n",
+    "            data = resp.json() #converting json string to json dict Server → sends string-- Python → converts to dict\n",
     "            print(\"Data received successfully:\")\n",
     "            print(data)\n",
     "        except json.JSONDecodeError:\n",
