--- a/data_bricks_use_case_workout/delta_lake_lakehouse_operations_1.ipynb
+++ b/data_bricks_use_case_workout/delta_lake_lakehouse_operations_1.ipynb
@@ -743,7 +743,9 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE OR REPLACE TABLE drugstbl_merge AS SELECT * FROM drugstb1 WHERE rating<=8;"
+    "CREATE OR REPLACE TABLE drugstbl_merge \n",
+    "AS SELECT * FROM drugstb1 \n",
+    "WHERE rating<=8;"
    ]
   },
   {
@@ -909,9 +911,9 @@
    },
    "source": [
     "%md\n",
-    "MATCHED\n",
-    "NOT MATCHED (by target)\n",
-    "NOT MATCHED BY SOURCE\n",
+    "MATCHED<br>\n",
+    "NOT MATCHED (by target)<br>\n",
+    "NOT MATCHED BY SOURCE<br>\n",
     "\n",
     "Case 1️⃣ — MATCHED-Row exists in BOTH source and target<br>\n",
     "➡ Executes:WHEN MATCHED THEN UPDATE<Br>\n",
