--- a/data_bricks_use_case_workout/delta_lake_lakehouse_optimizations_2.ipynb
+++ b/data_bricks_use_case_workout/delta_lake_lakehouse_optimizations_2.ipynb
@@ -1185,7 +1185,8 @@
     "%sql\n",
     "-- Step 4 – Run OPTIMIZE ZORDER - watch out the metrics - zOrderStats\n",
     "-- Now compact and physically order data.\n",
-    "OPTIMIZE customer_txn ZORDER BY (transaction_date);"
+    "OPTIMIZE customer_txn \n",
+    "ZORDER BY (transaction_date);"
    ]
   },
   {
@@ -1566,7 +1567,9 @@
     "partitioned by (transaction_date);\n",
     "insert into customer_txn_part1 select * from customer_txn;\n",
     "--or\n",
-    "create or replace table customer_txn_part partitioned by (transaction_date) as select * from customer_txn;"
+    "create or replace table customer_txn_part \n",
+    "partitioned by (transaction_date) \n",
+    "as select * from customer_txn;"
    ]
   },
   {
